# TP_Genie_informatique

./: 3.1.2_ACC_document-reponse.docx  README.md
TP1/: CMakeLists.txt  cel2far.c  conversion_celfar.c  far2cel.c  impots.c  tva.c
TP2/: CMakeLists.txt  geometrie.c
TP4/: CMakeLists.txt  fractions.c
TP5/: CMakeLists.txt  chiffrer1.c  compter_voyelles.c  depassement.c  texte_1.c  texte_2.c  texte_3.c  texte_4.c
TP6/: CMakeLists.txt  pendu.c  secante.c
TP7/: Makefile  outils.c  outils.h  test.c  tri.c
TP8/: CMakeLists.txt  addition.c
TP9/: CMakeLists.txt  sondage.c
TP_GIA/: a.out  main.c  structures.h
